--- a/RestApi/RestApi/appsettings.json
+++ b/RestApi/RestApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+  }
 }
