--- a/RestApi/RestApi/appsettings.json
+++ b/RestApi/RestApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=Northwind;Trusted_Connection=True;"
   }
 }
