--- a/RestApi/RestApi/RestApi.csproj
+++ b/RestApi/RestApi/RestApi.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataProvider\DataProvider.csproj" />
+  </ItemGroup>
+
 
 </Project>
