--- a/RestApi/RestApi.Tests/RestApi.Tests.csproj
+++ b/RestApi/RestApi.Tests/RestApi.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataProvider\DataProvider.csproj" />
+    <ProjectReference Include="..\RestApi\RestApi.csproj" />
   </ItemGroup>
 
 </Project>
